<resources>
    <string name="app_name">QuickNovel</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Explore</string>
    <string name="title_download">Library</string>
    <string name="locale_key" translatable="false">locale_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="restore_settings">Restore data from backup</string>
    <string name="active_providers">%d providers enabled</string>
    <string name="search_hint">Search Novels…</string>
    <string name="synopsis">Synopsis</string>
    <string name="no_data">No Data</string>
    <string name="no_author">Author not found</string>
    <string name="no_chapters">No Chapters</string>
    <string name="error_outside_chapter">Invalid skip</string>
    <string name="generate_epub">Generate Epub</string>
    <string name="generating_epub">Generating Epub</string>
    <string name="reload_error">Retry connection…</string>
    <string name="download_text">Download</string>
    <string name="download">Download</string>
    <string name="download_from_chapter">Partial download</string>
    <string name="download_ml">Download translation model</string>
    <string name="download_ml_long">To translate locally the app needs to download the translation model (~30MB)</string>
    <string name="novel_imagecover_descript">Novel Imagecover</string>
    <string name="background_image_descript">Background Image</string>
    <string name="back_to_search">Back to search</string>
    <string name="downloads_text">Downloads</string>
    <string name="open_text">Read</string>
    <string name="update_text">Update</string>
    <string name="provider_list_key">provider_list</string>
    <string name="search_providers_list_key">search_providers_list</string>
    <string name="auto_update_key">auto_update</string>
    <string name="external_reader_key">external_reader</string>
    <string name="remove_external_key">remove_external</string>
    <string name="manual_check_update_key">manual_check_update</string>
    <string name="backup_key">backup_key</string>
    <string name="rating_format_key">rating_format</string>
    <string name="grid_format_key">grid_format</string>
    <string name="download_format_key">download_format</string>
    <string name="exampleTXT">"this is <annotation key="rounded">a regular</annotation> paragraph."</string>
    <string name="tags">Tags</string>
    <string name="views">Views</string>
    <string name="delete">Delete</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_location">Select location</string>
    <string name="poster_descript">Poster</string>
    <string name="sort_downloads_descript">Sort Downloads</string>
    <string name="search_providers">Search Providers</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="overall">Overall</string>
    <string name="info">Info</string>
    <string name="app_settings">App settings</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_desc">Gives you the search results separated by provider</string>
    <string name="show_app_updates">Show app updates</string>
    <string name="show_app_updates_desc">Automatically search for new updates on start</string>
    <string name="external_reader">External reader</string>
    <string name="reader">External reader</string>
    <string name="external_reader_desc">Use an external app to read</string>
    <string name="remove_bloat">Remove Bloat</string>
    <string name="remove_bloat_desc">Removes the title and translator from all pages, will cause longer generation time</string>
    <string name="check_for_update">Check for app Update</string>
    <string name="translating">Translating</string>
    <string name="filter_dialog_sort_by">Sort by</string>
    <string name="filter_dialog_filter">Apply</string>
    <string name="filter_dialog_general">General</string>
    <string name="filter_dialog_order_by">Order by</string>
    <string name="filter_dialog_genre">Genre</string>
    <string name="browse_list_icon">Icon</string>
    <string name="home_title_text">Explore</string>
    <string name="mainpage_filter">Filter</string>
    <string name="shadow_descript">Shadow</string>
    <string name="user_image_avatar">Avatar</string>
    <string name="change_providers_descript">Change Provider</string>
    <string name="poster_open_source_descript">Open Source</string>
    <string name="mainpage_sort_by_button_text">Sort</string>
    <string name="read_action_settings">Settings</string>
    <string name="read_action_chapters">Chapters</string>
    <string name="read_action_chapters_formatted" formatted="true">%d Chapters</string>
    <string name="read_action_tts">Text To Speech</string>
    <string name="read_action_screen_rotation">Screen Rotation</string>
    <string name="grid_view">Grid</string>
    <string name="list_view">List</string>
    <string name="download_list_view_key" translatable="false">download_list_view_key</string>
    <string name="history_list_view_key" translatable="false">history_list_view_key</string>
    <string name="search_list_view_key" translatable="false">search_list_view_key</string>
    <string name="download_open_action">Open</string>
    <string name="download_read_action">Read</string>
    <string name="download_update_action">Update</string>
    <string name="download_delete_action">Delete</string>
    <string name="default_text">Default</string>
    <string name="rotation_type">Rotation type</string>
    <string name="rotation_free">Free</string>
    <string name="rotation_portrait">Portrait</string>
    <string name="rotation_landscape">Landscape</string>
    <string name="rotation_force_portrait">Locked portrait</string>
    <string name="rotation_force_landscape">Locked landscape</string>
    <string name="inf_scroll">Infinite scroll</string>
    <string name="button_scroll">Chapter buttons</string>
    <string name="overscroll_scroll">Overscroll</string>
    <string name="read_epub">Read epub</string>
    <string name="type_reading">Reading</string>
    <string name="type_on_hold">On-Hold</string>
    <string name="type_completed">Completed</string>
    <string name="type_dropped">Dropped</string>
    <string name="type_plan_to_read">Plan to Read</string>
    <string name="type_none">None</string>
    <string name="has_read">Has read</string>
    <string name="read_display_settings">Settings</string>
    <string name="tab_translation">Translate</string>
    <string name="read_text_size">Text</string>
    <string name="bigger_font">Bigger Font</string>
    <string name="smaller_font">Smaller Font</string>
    <string name="scroll_with_volume_keys">Scroll with volume keys</string>
    <string name="general_settings">General</string>
    <string name="lock_tts">Lock TTS scroll area</string>
    <string name="reading_color">Reading Color</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="read_color">Reader Theme</string>
    <string name="show_battery">Show Battery</string>
    <string name="show_time">Show Time</string>
    <string name="result_share">Share</string>
    <string name="reader_font">Reader Font</string>
    <string name="font">Font</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="long_download_time">Warning, This source has extremely long download time, streaming is recommended</string>
    <string name="quickstream_novel_text">Stream read novel</string>
    <string name="history_more_options">More Options</string>
    <string name="stream_read">Stream Read</string>
    <string name="clear_history">Clear History</string>
    <string name="nothing_read_recently">Nothing read recently</string>
    <string name="monke_eating">Monke Eating</string>
    <string name="tab_downloads">Downloads</string>
    <string name="reviews_to_top">To top</string>
    <string name="text_size">Text Size</string>
    <string name="text_padding">Text Side Margin</string>
    <string name="reset_value">Reset to default</string>
    <string name="text_font">Text Font</string>
    <string name="scroll_type">Scroll Type</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="error_loading_novel">Error loading novel</string>
    <string name="error_loading_chapter">Error loading chapter</string>
    <string name="text_padding_top">Text Top Margin</string>
    <string name="home_more_info">More info</string>
    <string name="home_expanded_hide">Hide</string>
    <string name="reload_chapter">Reload Chapter</string>
    <string name="provider_lang_settings">Provider Languages</string>
    <string name="locale_settings">App Languages</string>
    <string name="sort_apply">Apply</string>
    <string name="sort_cancel">Cancel</string>
    <string name="keep_screen_active">Keep screen active</string>
    <string name="twelve_hour_time">12 Hour time</string>
    <string name="backup_location">Backup location</string>
    <string name="backup_settings">Backup data</string>
    <string name="restore_success">Loaded backup file</string>
    <string name="restore_failed_format" formatted="true">Failed to restore data from file %s</string>
    <string name="backup_success">Successfully stored data at %s</string>
    <string name="logcat_success">Successfully stored logcat at %s</string>
    <string name="backup_failed">Storage permissions missing, please try again</string>
    <string name="backup_failed_error_format">Error backing up: %s</string>
    <string name="tts_locale">Language</string>
    <string name="tts_voice">Voice</string>
    <string name="tts_voice_title">TTS Voice</string>
    <string name="theme_key">theme_key</string>
    <string name="theme">Theme</string>
    <string name="primary_color_key">primary_color_key</string>
    <string name="primary_color_settings">Main Color</string>
    <string name="library_display_mode">Library Display Mode</string>
    <string name="rating_format">Rating Format</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="remove_from_history_format">This remove %s from your history.\nAre you sure?</string>
    <string name="download_path_key">download_path_key</string>
    <string name="download_path_pref">Download location</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="show_log_cat">Show Logcat 🐈</string>
    <string name="updates_title">Novel Updates</string>
    <string name="updates_check_now">Check now</string>
    <string name="updates_add_novels">Add novels</string>
    <string name="updates_mark_seen">Mark as seen</string>
    <string name="updates_empty_title">No updates</string>
    <string name="updates_empty_hint">Tap + to add novels from your library to monitor for new chapters.</string>
    <string name="novel_auto_update_category">Notifications</string>
    <string name="novel_auto_update_enabled_title">New chapter notifications</string>
    <string name="novel_auto_update_enabled_desc">Periodically check watched novels for new chapters in the background</string>
    <string name="novel_auto_update_interval_title">Check interval</string>
    <string name="novel_auto_update_interval_desc">How often to check for new chapters</string>
    <string name="novel_auto_update_enabled_key" translatable="false">novel_auto_update_enabled</string>
    <string name="novel_auto_update_interval_key" translatable="false">novel_auto_update_interval</string>
</resources>