<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory/>

    <PreferenceCategory android:title="@string/search">
        <SwitchPreference
            android:icon="@drawable/search_icon_white"
            app:key="advanced_search"
            android:title="@string/advanced_search"
            android:summary="@string/advanced_search_desc" />
        <Preference
            app:icon="@drawable/ic_baseline_cloud_24"
            android:key="@string/search_providers_list_key"
            android:title="@string/search_providers" />
        <Preference
            android:icon="@drawable/ic_baseline_language_24"
            android:key="@string/provider_lang_key"
            android:title="@string/provider_lang_settings" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme">
        <Preference
            app:key="@string/theme_key"
            android:title="@string/theme"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="@string/primary_color_key"
            android:title="@string/primary_color_settings"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:icon="@drawable/ic_baseline_language_24"
            android:key="@string/locale_key"
            android:title="@string/locale_settings" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_download">
        <Preference
            app:icon="@drawable/ic_baseline_grid_view_24"
            android:key="@string/download_format_key"
            android:title="@string/library_display_mode"
            app:defaultValue="list"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/DownloadGridFormat"
            android:entryValues="@array/DownloadGridFormatData" />
        <Preference
            app:icon="@drawable/ic_baseline_star_24"
            android:key="@string/rating_format_key"
            android:title="@string/rating_format"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/novel_auto_update_category">
        <SwitchPreference
            app:key="@string/auto_update_key"
            android:title="@string/show_app_updates"
            android:summary="@string/show_app_updates_desc"
            app:defaultValue="true"
            android:icon="@drawable/ic_baseline_notifications_active_24" />
        <SwitchPreference
            android:icon="@drawable/ic_baseline_notifications_24"
            android:key="@string/novel_auto_update_enabled_key"
            android:title="@string/novel_auto_update_enabled_title"
            android:summary="@string/novel_auto_update_enabled_desc" />
        <Preference
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:key="@string/novel_auto_update_interval_key"
            android:title="@string/novel_auto_update_interval_title"
            android:summary="@string/novel_auto_update_interval_desc"
            app:dependency="@string/novel_auto_update_enabled_key" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/reader">
        <SwitchPreference
            app:key="@string/external_reader_key"
            android:title="@string/external_reader"
            android:summary="@string/external_reader_desc"
            android:icon="@drawable/ic_baseline_menu_book_24" />
        <SwitchPreference
            app:key="@string/remove_external_key"
            android:title="@string/remove_bloat"
            android:summary="@string/remove_bloat_desc"
            android:icon="@drawable/ic_baseline_edit_24" />
        <Preference
            android:key="@string/download_path_key"
            android:title="@string/download_path_pref"
            android:icon="@drawable/netflix_download" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <Preference
            android:icon="@drawable/baseline_save_as_24"
            android:key="@string/backup_key"
            android:title="@string/backup_settings" />
        <Preference
            android:icon="@drawable/baseline_restore_page_24"
            android:key="@string/restore_key"
            android:title="@string/restore_settings" />
        <Preference
            android:title="@string/check_for_update"
            app:key="@string/manual_check_update_key"
            app:icon="@drawable/ic_baseline_system_update_24" />
        <Preference
            android:icon="@drawable/baseline_description_24"
            android:key="@string/show_logcat_key"
            android:title="@string/show_log_cat" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/info">
        <Preference
            android:title="Github"
            android:icon="@drawable/ic_github_logo"
            app:summary="https://github.com/LagradOst/QuickNovel" />
        <Preference
            android:title="Join Discord"
            android:icon="@drawable/ic_baseline_discord_24"
            app:summary="https://discord.gg/5Hus6fM" />
    </PreferenceCategory>
</PreferenceScreen>